--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -5,7 +5,8 @@
   "projects": {
     "FrontEnd": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+       },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -96,14 +97,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.min.js"
+
 
             ]
           }
